--- a/src/top10_cpu.css
+++ b/src/top10_cpu.css
@@ -1,6 +1,5 @@
   #chart {
-              max-width: 650px;
-                          margin: 35px auto;
+                         margin: 0;
                                   }
   .is_ok {
   background-color: #caef74;
