--- a/src/chart.css
+++ b/src/chart.css
@@ -1,6 +1,3 @@
-body {
-    margin: 0;
-}
 
 @font-face {
   font-family: LeagueMono;
@@ -9,34 +6,54 @@ body {
 }
 
 @font-face {
-  font-family: jost;
-  src: url(../resources/fonts/Jost-100-Hairline.otf);
+  font-family: sourcesans;
+  src: url(../resources/fonts/SourceSansPro-Bold.ttf);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: sourcesans;
+  src: url(../resources/fonts/SourceSansPro-ExtraLight.ttf);
   font-weight: 100;
 }
 
 @font-face {
-  font-family: jost;
-  src: url(../resources/fonts/Jost-400-Book.otf);
+  font-family: sourcesans;
+  src: url(../resources/fonts/SourceSansPro-Regular.ttf);
   font-weight: normal;
 }
 
 @font-face {
-  font-family: jost;
-  src: url(../resources/fonts/Jost-200-Thin.otf);
+  font-family: sourcesans;
+  src: url(../resources/fonts/SourceSansPro-Light.ttf);
   font-weight: lighter;
 }
 
-
-#chart {
-    /* background: rgba(11,11,11,11); */
+body {
+    margin: 0;
 }
 
+#chart {
+}
+
+.apexcharts-title-text {
+    font-weight: bold;
+    font-size: 20px;
+    font-family: sourcesans;
+}
+
+.apexcharts-subtitle-text {
+    font-family: sourcesans;
+    font-size: 20px;
+}
 .apexcharts-datalabel {
-    font-weight: normal;
-    color: #fff;
-    font-size: 14px;
+    font-weight: bold;
+    color: #000;
+    font-size: 20px;
     text-rendering: geometricPrecision;
     letter-spacing: 2px;
+    text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+    -moz-text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
 }
 .xAxisCSS {
     font-weight: bold;
@@ -44,6 +61,13 @@ body {
 
 .yAxisCSS {
     font-weight: normal;
+}
+
+.apexcharts-yaxis-texts-g {
+}
+
+.apexcharts-yaxis-label {
+    font-size: 15;
 }
 
 .errorWrapper {
@@ -59,12 +83,12 @@ body {
 
 .warningMessage {
     display: block;
-    font-family: jost;
+    font-family: sourcesans;
 }
 
 .errorMessage {
     display: block;
-    font-family: jost;
+    font-family: sourcesans;
 }
 
 .fontWarningIcon {
