--- a/src/chart.css
+++ b/src/chart.css
@@ -1,32 +1,29 @@
-
 @font-face {
-  font-family: LeagueMono;
-  src: url(../resources/fonts/LeagueMono-BoldNormal.otf);
-  font-weight: bold;
+  font-family: "Roboto Regular";
+  src:  url('../../../front_src/src/fonts/fonts-generated/roboto-regular-webfont.woff2') format('woff2'),
+        url('../../../front_src/src/fonts/fonts-generated/roboto-regular-webfont.woff') format('woff'),
+        url('../../../front_src/src/fonts/fonts-generated/roboto-regular-webfont.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: sourcesans;
-  src: url(../resources/fonts/SourceSansPro-Bold.ttf);
-  font-weight: bold;
+    font-family: "Roboto Light";
+    src:  url('../../../front_src/src/fonts/fonts-generated/roboto-light-webfont.woff2') format('woff2'),
+          url('../../../front_src/src/fonts/fonts-generated/roboto-light-webfont.woff') format('woff'),
+          url('../../../front_src/src/fonts/fonts-generated/roboto-light-webfont.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: sourcesans;
-  src: url(../resources/fonts/SourceSansPro-ExtraLight.ttf);
-  font-weight: 100;
+    font-family: "Roboto Medium";
+    src:  url('../../../front_src/src/fonts/fonts-generated/roboto-medium-webfont.woff2') format('woff2'),
+          url('../../../front_src/src/fonts/fonts-generated/roboto-medium-webfont.woff') format('woff'),
+          url('../../../front_src/src/fonts/fonts-generated/roboto-medium-webfont.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: sourcesans;
-  src: url(../resources/fonts/SourceSansPro-Regular.ttf);
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: sourcesans;
-  src: url(../resources/fonts/SourceSansPro-Light.ttf);
-  font-weight: lighter;
+    font-family: "Roboto Bold";
+    src:  url('../../../front_src/src/fonts/fonts-generated/roboto-Bold-webfont.woff2') format('woff2'),
+          url('../../../front_src/src/fonts/fonts-generated/roboto-Bold-webfont.woff') format('woff'),
+          url('../../../front_src/src/fonts/fonts-generated/roboto-Bold-webfont.ttf') format('truetype');
 }
 
 body {
@@ -36,7 +33,7 @@ body {
 #chart {
 }
 
-.apexcharts-title-text {
+/* .apexcharts-title-text {
     font-weight: bold;
     font-size: 20px;
     font-family: sourcesans;
@@ -68,7 +65,7 @@ body {
 
 .apexcharts-yaxis-label {
     font-size: 15;
-}
+} */
 
 .errorWrapper {
     width: 100%;
